--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
 <h1 style="font-size:50px;text-align:center;">Quality</h1>
 
 <div style="text-align:center;">
-   <video src="video/chocolate2.mp4" autoplay muted loop></video>
+   <video src="chocolate2.mp4" autoplay muted loop></video>
 </div>
